--- a/ed_springboot_gradle/src/main/resources/templates/admin/content/news.html
+++ b/ed_springboot_gradle/src/main/resources/templates/admin/content/news.html
@@ -64,7 +64,7 @@
 										<td th:text="${news.title}"></td>
 										<td th:text="${news.img}"></td>
 										<td th:text="${news.content}"></td>
-										<td th:text="${news.datetime}"></td>
+										<!-- <td th:text="${news.datetime}"></td> -->
 										<td><a th:href="@{/admin/news/edit(id=${news.id})}"
 											title="编辑"><i class="icon-edit"></i></a></td>
 										<td><a th:href="@{/admin/news/del(id=${news.id})}"
