--- a/ed_springboot_gradle/src/main/resources/templates/admin/content/user.html
+++ b/ed_springboot_gradle/src/main/resources/templates/admin/content/user.html
@@ -79,7 +79,7 @@
 										<th data-column-id="username">用户名</th>
 										<th data-column-id="image">头像</th>
 										<th data-column-id="enabled">启用/禁用</th>
-										<th data-column-id="role">角色</th>
+										<!-- <th data-column-id="role">角色</th> -->
 									</tr>
 								</thead>
 							</table>
