--- a/david_springboot_parent/david_springboot_fileupload/src/main/resources/templates/from_file.html
+++ b/david_springboot_parent/david_springboot_fileupload/src/main/resources/templates/from_file.html
@@ -1,19 +1,22 @@
-<form id='myupload' action='http://localhost:8080/uploadSign' method='post' enctype='multipart/form-data'>
-  <div class="demo">
-    <div class="btn">
-      <span>添加附件</span>
-      <input id="fileupload" type="file" name="file1"></div>
-    <div class="progress">
-      <span class="bar"></span>
-      <span class="percent">0%</span></div>
-    <!-- 显示已上传的文件名 -->
-    <div class="files"></div>
-    <!-- 显示已上传的图片-->
-    <div class="showimg"></div>
-  </div>
-  <input type="submit" onclick="gosubmit2()" /></form>
+<form id='myupload' action='http://localhost:8080/uploadSign'
+	method='post' enctype='multipart/form-data'>
+	<div class="demo">
+		<div class="btn">
+			<span>添加附件</span> <input id="fileupload" type="file" name="file1">
+		</div>
+		<div class="progress">
+			<span class="bar"></span> <span class="percent">0%</span>
+		</div>
+		<!-- 显示已上传的文件名 -->
+		<div class="files"></div>
+		<!-- 显示已上传的图片-->
+		<div class="showimg"></div>
+	</div>
+	<input type="submit" onclick="gosubmit2()" />
+</form>
 <script src="https://cdn.bootcss.com/jquery/1.6.4/jquery.js"></script>
-<script type="text/javascript" src="https://cdn.bootcss.com/jquery.form/4.1.0/jquery.form.min.js"></script>
+<script type="text/javascript"
+	src="https://cdn.bootcss.com/jquery.form/4.1.0/jquery.form.min.js"></script>
 <script type="text/javascript">var bar = $('.bar'); //进度条
   var percent = $('.percent'); //获取上传百分比
   var showimg = $('.showimg'); //显示图片的div
