--- a/david_springboot_parent/david_springboot_fileupload/src/main/resources/templates/upload.html
+++ b/david_springboot_parent/david_springboot_fileupload/src/main/resources/templates/upload.html
@@ -2,12 +2,12 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <body>
 
-<h1>Spring Boot file upload example</h1>
+	<h1>Spring Boot file upload example</h1>
 
-<form method="POST" action="/upload" enctype="multipart/form-data">
-    <input type="file" name="file" /><br/><br/>
-    <input type="submit" value="Submit" />
-</form>
+	<form method="POST" action="/upload" enctype="multipart/form-data">
+		<input type="file" name="file" /><br />
+		<br /> <input type="submit" value="Submit" />
+	</form>
 
 </body>
 </html>
